--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <title>Weather App</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col">Today</div>
+        <div class="col">Tuesday</div>
+        <div class="col">Wednesday</div>
+        <div class="col">Thursday</div>
+        <div class="col">Friday</div>
+      </div>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
