--- a/index.html
+++ b/index.html
@@ -15,6 +15,27 @@
   </head>
   <body>
     <div class="container">
+      <h1>
+        <div class="row">
+          <div class="col-8">
+            <form id="search-form">
+              <input
+                id="search-city-input"
+                class="search-bar"
+                type="text"
+                placeholder="🔍  Search for a city"
+              />
+              <input
+                id="search-button"
+                class="button"
+                type="submit"
+                value="Search"
+              />
+            </form>
+          </div>
+        </div>
+      </h1>
+
       <div class="row">
         <div class="col">Today</div>
         <div class="col">Tuesday</div>
