--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
           </div>
         </div>
       </h1>
+      <h2>
+        <div class="row">
+          <div class="col">☀️</div>
+          <div class="col">
+              Sunny</br>
+              Currently XX°C</br>
+              Wind: X km/h</br>
+              Humidity: XX%
+            </div>
+        </div>
+      </h2>
 
       <div class="row">
         <div class="col">Today</div>
