--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
             </div>
         </div>
       </h2>
-
+      <h3>
+          Current City
+      </h3>
+      <h4>
+          Today's Date
+      </h4>
+      <h5>
       <div class="row">
         <div class="col">Today</div>
         <div class="col">Tuesday</div>
@@ -54,6 +60,7 @@
         <div class="col">Thursday</div>
         <div class="col">Friday</div>
       </div>
+      </h5>
     </div>
     <script src="src/index.js"></script>
   </body>
