Update css layout

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       </h1>
       <h2>
         <div class="row">
-          <div class="col">☀️</div>
+          <div class="col">
+            <span class="current-icon">☀️</span>
+            </div>
           <div class="col">
               Sunny</br>
               Currently XX°C</br>
@@ -50,18 +52,35 @@
         </div>
       </h2>
       <h3>
-          Current City
+          Current City | Today's Date
       </h3>
-      <h4>
-          Today's Date
-      </h4>
       <h5>
       <div class="row">
-        <div class="col">Today</div>
-        <div class="col">Tuesday</div>
-        <div class="col">Wednesday</div>
-        <div class="col">Thursday</div>
-        <div class="col">Friday</div>
+        <div class="col">
+            Today<br>
+            ☀️<br>
+            XX°C / XX°C
+        </div>
+        <div class="col">
+            Tuesday<br>
+            ☀️<br>
+            XX°C / XX°C
+        </div>
+        <div class="col">
+            Wednesday<br>
+            ☀️<br>
+            XX°C / XX°C
+        </div>
+        <div class="col">
+            Thursday<br>
+            ☀️<br>
+            XX°C / XX°C
+        </div>
+        <div class="col">
+            Friday<br>
+            ☀️<br>
+            XX°C / XX°C
+        </div>
       </div>
       </h5>
     </div>
