--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,71 +21,78 @@
   </head>
   <body>
     <div class="container">
-      <h1>
-        <div class="row">
-          <div class="col-8">
-            <form id="search-form">
-              <input
-                id="search-city-input"
-                class="search-bar"
-                type="text"
-                placeholder="🔍  Search for a city"
-              />
-              <input
-                id="search-button"
-                class="button"
-                type="submit"
-                value="Search"
-              />
-            </form>
+      <div class="weather-app">
+        <h1>
+          <div class="row">
+            <div class="col-8">
+              <form id="search-form">
+                <input
+                  id="search-city-input"
+                  class="search-bar"
+                  type="text"
+                  placeholder="🔍  Search for a city"
+                />
+                <input
+                  id="search-button"
+                  class="button"
+                  type="submit"
+                  value="Search"
+                />
+              </form>
+            </div>
           </div>
-        </div>
-      </h1>
-      <h2>
-        <div class="row">
-          <div class="col">
-            <span class="current-icon">☀️</span>
+        </h1>
+        <h2>
+          <div class="row">
+            <div class="col-6">
+              <span class="current-icon">☀️</span>
             </div>
-          <div class="col">
-              Sunny</br>
-              Currently XX°C</br>
-              Wind: X km/h</br>
-              Humidity: XX%
+            <div class="col-6">
+              <ul>
+                <li>Sunny</li>
+                <li>Currently XX°C | °F</li>
+                <li>Wind: X km/h</li>
+                <li>Humidity: XX%</li>
+              </ul>
             </div>
-        </div>
-      </h2>
-      <h3>
-          Current City | Today's Date
-      </h3>
-      <h5>
-      <div class="row">
-        <div class="col">
-            Today<br>
-            ☀️<br>
-            XX°C / XX°C
-        </div>
-        <div class="col">
-            Tuesday<br>
-            ☀️<br>
-            XX°C / XX°C
-        </div>
-        <div class="col">
-            Wednesday<br>
-            ☀️<br>
-            XX°C / XX°C
-        </div>
-        <div class="col">
-            Thursday<br>
-            ☀️<br>
-            XX°C / XX°C
-        </div>
-        <div class="col">
-            Friday<br>
-            ☀️<br>
-            XX°C / XX°C
-        </div>
+          </div>
+        </h2>
+        <h3>Current City | Today's Date</h3>
+        <h5>
+          <div class="row">
+            <div class="col">
+              <li>Today</li>
+              <li>☀️</li>
+              <li>XX°C / XX°C</li>
+            </div>
+            <div class="col">
+              <li>Tuesday</li>
+              <li>☀️</li>
+              <li>XX°C / XX°C</li>
+            </div>
+            <div class="col">
+              <li>Wednesday</li>
+              <li>☀️</li>
+              <li>XX°C / XX°C</li>
+            </div>
+            <div class="col">
+              <li>Thursday</li>
+              <li>☀️</li>
+              <li>XX°C / XX°C</li>
+            </div>
+            <div class="col">
+              <li>Friday</li>
+              <li>☀️</li>
+              <li>XX°C / XX°C</li>
+            </div>
+          </div>
+        </h5>
       </div>
-      </h5>
+      <small>
+        <a href="https://github.com/jacquelinesz/weather-app" target="_blank"
+          >Open-source code</a
+        >, by Jacqueline Solorzano
+      </small>
     </div>
     <script src="src/index.js"></script>
   </body>
