Update both css and html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,6 +16,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
   <body>
@@ -61,29 +61,39 @@
         <h5>
           <div class="row">
             <div class="col">
-              <li>Today</li>
-              <li>☀️</li>
-              <li>XX°C / XX°C</li>
+              <div class="day-0">
+                <li>Today</li>
+                <li>☀️</li>
+                <li>XX°C / XX°C</li>
+              </div>
             </div>
             <div class="col">
-              <li>Tuesday</li>
-              <li>☀️</li>
-              <li>XX°C / XX°C</li>
+              <div class="day-1">
+                <li>Tuesday</li>
+                <li>☀️</li>
+                <li>XX°C / XX°C</li>
+              </div>
             </div>
             <div class="col">
-              <li>Wednesday</li>
-              <li>☀️</li>
-              <li>XX°C / XX°C</li>
+              <div class="day-2">
+                <li>Wednesday</li>
+                <li>☀️</li>
+                <li>XX°C / XX°C</li>
+              </div>
             </div>
             <div class="col">
-              <li>Thursday</li>
-              <li>☀️</li>
-              <li>XX°C / XX°C</li>
+              <div class="day-3">
+                <li>Thursday</li>
+                <li>☀️</li>
+                <li>XX°C / XX°C</li>
+              </div>
             </div>
             <div class="col">
-              <li>Friday</li>
-              <li>☀️</li>
-              <li>XX°C / XX°C</li>
+              <div class="day-4">
+                <li>Friday</li>
+                <li>☀️</li>
+                <li>XX°C / XX°C</li>
+              </div>
             </div>
           </div>
         </h5>
