--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios.dist.axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -48,9 +49,9 @@
               <span class="current-icon">☀️</span>
             </div>
             <div class="col-6">
-              <ul>
+              <ul class="description">
                 <li>Sunny</li>
-                <li>Currently XX°C | °F</li>
+                <li>Currently: XX°C | °F</li>
                 <li>Wind: X km/h</li>
                 <li>Humidity: XX%</li>
               </ul>
