Changed location of current temperature

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
           <div class="row">
             <div class="col-6">
               <span class="current-icon">☀️</span>
+              <span class="current-temp-number">XX</span
+              ><span class="units"> °C | <a href="#">°F</a></span>
             </div>
             <div class="col-6">
               <ul class="description">
                 <li>Sunny</li>
-                <li>Currently: XX°C | °F</li>
                 <li>Wind: X km/h</li>
                 <li>Humidity: XX%</li>
               </ul>
