--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <script src="https://unpkg.com/axios.dist.axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -47,19 +47,22 @@
           <div class="row">
             <div class="col-6">
               <span class="current-icon">☀️</span>
-              <span class="current-temp-number">XX</span
-              ><span class="units"> °C | <a href="#">°F</a></span>
+              <span class="current-temp-number" id="current-temp">XX</span
+              ><span class="units">°C | <a href="#">°F</a></span>
             </div>
             <div class="col-6">
               <ul class="description">
-                <li>Sunny</li>
-                <li>Wind: X km/h</li>
-                <li>Humidity: XX%</li>
+                <li id="condition">Sunny</li>
+                <li>Wind: <span id="wind">X </span>km/h</li>
+                <li>Humidity: <span id="humid">XX</span>%</li>
               </ul>
             </div>
           </div>
         </h2>
-        <h3>Current City | Today's Date</h3>
+        <h3>
+          <span id="city">Current City</span> |
+          <span id="date">Today's Date</span>
+        </h3>
         <h5>
           <div class="row">
             <div class="col">
