Update current time

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
         </h2>
         <h3>
-          <span id="city">Current City</span> |
+          <span id="city">Current City</span> | Last updated:
           <span id="date">Today's Date</span>
         </h3>
         <h5>
