--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
         <h2>
           <div class="row">
             <div class="col-6">
-              <span class="current-icon">☀️</span>
-              <span class="current-temp-number" id="current-temp">XX</span
-              ><span class="units">°C | <a href="#">°F</a></span>
+              <img
+                src=""
+                class="icon"
+                id="icon"
+                alt="Cloudy"
+              /><span class="temp-number" id="temp-number">XX</span><span class="units">°C | <a href="#">°F</a></span>
+              </span>
             </div>
             <div class="col-6">
               <ul class="description">
