Created conversion for fahrenheit and celsius

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 class="icon"
                 id="icon"
                 alt="Cloudy"
-              /><span class="temp-number" id="temp-number">XX</span><span class="units">°C | <a href="#">°F</a></span>
+              /><span class="temp-number" id="temp-number">XX</span>
+              <span class="units"><a href="#" id="celsius-link" class="celsius">°C</a> | <a href="#" id="fahrenheit-link" class="fahrenheit">°F</a></span>
               </span>
             </div>
             <div class="col-6">
