--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <div class="weather-app">
         <h1>
           <form id="search-form">
-              <div class="row">
-                  <div class="col-9">
+            <div class="row">
+              <div class="col-9">
                 <input
                   id="search-city-input"
                   class="search-bar"
@@ -34,32 +34,34 @@
                   placeholder="🔍  Search for a city"
                   autocomplete="off"
                 />
-                </div>
-                <div class="col-3">
+              </div>
+              <div class="col-3">
                 <input
                   id="search-button"
                   class="search-button w-100"
                   type="submit"
                   value="Search"
                 />
-                </div>
-              </form>
+              </div>
+            </div>
+          </form>
         </h1>
         <h2>
           <span id="city">Current City</span> | Last updated:
           <span id="date">Today's Date</span>
-        </h3>
+        </h2>
         <h3>
           <div class="row">
             <div class="col-6">
-              <img
-                src=""
-                class="icon"
-                id="icon"
-                alt="Cloudy"
-              /><span class="temp-number" id="temp-number">XX</span>
-              <span class="units"><a href="#" id="celsius-link" class="celsius">°C</a> | <a href="#" id="fahrenheit-link" class="fahrenheit">°F</a></span>
-              </span>
+              <img src="" class="icon" id="icon" alt="Cloudy" /><span
+                class="temp-number"
+                id="temp-number"
+                >XX</span
+              >
+              <span class="units"
+                ><a href="#" id="celsius-link" class="celsius">°C</a> |
+                <a href="#" id="fahrenheit-link" class="fahrenheit">°F</a></span
+              >
             </div>
             <div class="col-6">
               <ul class="description">
@@ -70,8 +72,7 @@
             </div>
           </div>
         </h3>
-        
-              </div>
+      </div>
       <small>
         <a href="https://github.com/jacquelinesz/weather-app" target="_blank"
           >Open-source code</a
