Added the forecast on html and edited css

--- a/index.html
+++ b/index.html
@@ -72,6 +72,28 @@
             </div>
           </div>
         </h3>
+        <h4>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="day-0">
+                  <li class="weather-forecast-date">Today</li>
+                  <li>
+                    <img
+                      src="http://openweathermap.org/img/wn/50d@2x.png"
+                      alt=""
+                      width="42"
+                    />
+                  </li>
+                  <li class="weather-forecast-temperature">
+                    <span class="weather-forecast-low">X°C</span> /
+                    <span class="weather-forecast-high">X°C</span>
+                  </li>
+                </div>
+              </div>
+            </div>
+          </div>
+        </h4>
       </div>
       <small>
         <a href="https://github.com/jacquelinesz/weather-app" target="_blank"
