--- a/index.html
+++ b/index.html
@@ -73,26 +73,7 @@
           </div>
         </h3>
         <h4>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="day-0">
-                  <li class="weather-forecast-date">Today</li>
-                  <li>
-                    <img
-                      src="http://openweathermap.org/img/wn/50d@2x.png"
-                      alt=""
-                      width="42"
-                    />
-                  </li>
-                  <li class="weather-forecast-temperature">
-                    <span class="weather-forecast-low">X°C</span> /
-                    <span class="weather-forecast-high">X°C</span>
-                  </li>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="weather-forecast"></div>
         </h4>
       </div>
       <small>
