--- a/index.html
+++ b/index.html
@@ -58,15 +58,12 @@
                 id="temp-number"
                 >XX</span
               >
-              <span class="units"
-                ><a href="#" id="celsius-link" class="celsius">°C</a> |
-                <a href="#" id="fahrenheit-link" class="fahrenheit">°F</a></span
-              >
+              <span class="units">°F</span>
             </div>
             <div class="col-6">
               <ul class="description">
                 <li id="condition">Sunny</li>
-                <li>Wind: <span id="wind">X </span>km/h</li>
+                <li>Wind: <span id="wind">X </span>mph</li>
                 <li>Humidity: <span id="humid">XX</span>%</li>
               </ul>
             </div>
