--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>
           <form id="search-form">
             <div class="row">
-              <div class="col-9">
+              <div class="col-6">
                 <input
                   id="search-city-input"
                   class="search-bar"
@@ -41,6 +41,14 @@
                   class="search-button w-100"
                   type="submit"
                   value="Search"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="📍 Location"
+                  class="current-location"
+                  id="current-location-button"
                 />
               </div>
             </div>
