Made css edits to search engine and changed 24hr to 12hr

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <div class="col-3">
                 <input
                   id="search-button"
-                  class="search-button w-100"
+                  class="search-button"
                   type="submit"
                   value="Search"
                 />
@@ -71,7 +71,7 @@
             <div class="col-6">
               <ul class="description">
                 <li id="condition">Sunny</li>
-                <li>Wind: <span id="wind">X </span>mph</li>
+                <li>Wind: <span id="wind">X</span> mph</li>
                 <li>Humidity: <span id="humid">XX</span>%</li>
               </ul>
             </div>
